--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,7 @@
 # Site settings
 title: Autosea Thesis Proposals
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    A description of the current project and master theses for the Autosea project. The overall project topic is maritime target tracking and collision avoidance.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://autosea.github.io" # the base hostname & protocol for your site
 github_username:  autosea
