Changed highlighter per github help page

--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ footer-links-active:
 # Output options (more information on Jekyll's site)
 timezone: "Europe/Oslo"
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 permalink: pretty
 paginate: 100 #All posts on first page
 
