Added jekyll-paginate gem to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -93,5 +93,7 @@ exclude:
   - LICENSE
   - README.md
 
+gems: [jekyll-paginate]
+
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
