--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
-url: "http://autosea.github.io"
+url: "http://autoferry.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Autosea
+title: Autoferry
 
 # Short description of your site
 description: Master thesis proposals
@@ -34,7 +34,7 @@ navbar-links:
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Autosea
+  name: Autoferry
   # email: "youremail@domain.com"
   # facebook: yourname  # eg. daattali
   # github: yourname    # eg. daattali
