--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
-url: "https://autoferry.github.io"
+url: "https://autosit.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Autoferry
+title: Autosit
 
 # Short description of your site
 description: Master thesis proposals
@@ -23,7 +23,7 @@ description: Master thesis proposals
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/ferge-logo-circlecrop.png"
+avatar: "/assets/autosit-logo-circlecrop.png"
 
 # List of links in the navigation bar
 navbar-links:
@@ -34,7 +34,7 @@ navbar-links:
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Autoferry
+  name: Autosit
   # email: "youremail@domain.com"
   # facebook: yourname  # eg. daattali
   # github: yourname    # eg. daattali
